version/0.20/_sources/api/solver/_autosummary/settings/anode_pl_zone.rst.txt
:orphan:

.. _anode_pl_zone:

anode_pl_zone
=============

.. autoclass:: ansys.fluent.core.solver.settings_241.anode_pl_zone.anode_pl_zone
    :show-inheritance:

.. rubric:: Attributes

==============================================   ======================================

Attribute                                                                       Summary

==============================================   ======================================
:ref:`anode_pl_zone_list <anode_pl_zone_list>`       Set anode porous layer cell zones.

:ref:`anode_pl_update <anode_pl_update>`             Use Collective Boundary Condition.

:ref:`anode_pl_material <anode_pl_material>`               Anode porous layer material.

:ref:`anode_pl_porosity <anode_pl_porosity>`               Anode porous layer porosity.

:ref:`anode_pl_kr <anode_pl_kr>`                        Anode porous layer permibility.

==============================================   ======================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`anode <anode>`       'anode' child.

====================   ==================

