version/0.22/_sources/api/solver/_autosummary/settings/anode_pl_zone.rst.txt
:orphan:

.. _anode_pl_zone:

anode_pl_zone
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.anode_pl_zone.anode_pl_zone
    :show-inheritance:

.. rubric:: Attributes

==================================================   =======================================================

Attribute                                                                                            Summary

==================================================   =======================================================
:ref:`anode_pl_zone_list <anode_pl_zone_list>`                            Set anode porous layer cell zones.

:ref:`anode_pl_update <anode_pl_update>`                                  Use Collective Boundary Condition.

:ref:`anode_pl_material <anode_pl_material>`                                    Anode porous layer material.

:ref:`anode_pl_porosity <anode_pl_porosity>`                                    Anode porous layer porosity.

:ref:`anode_pl_kr <anode_pl_kr>`                                            Anode porous layer permeability.

:ref:`anode_pl_cp_function <anode_pl_cp_function>`           Anode porous layer capillary pressure function.

:ref:`anode_pl_angle <anode_pl_angle>`                                     Anode porous layer contact angle.

:ref:`anode_pl_a <anode_pl_a>`                           Anode porous layer Leverett function coefficient a.

:ref:`anode_pl_b <anode_pl_b>`                           Anode porous layer Leverett function coefficient b.

:ref:`anode_pl_c <anode_pl_c>`                           Anode porous layer Leverett function coefficient c.

==================================================   =======================================================

.. rubric:: Included in:

====================   =================

Parent                           Summary

====================   =================
:ref:`anode <anode>`       Set up anode.

====================   =================

